Project

General

Profile

Actions

Bug #52090

closed

[pwl] fix buf_persist and add writeback_lat perf counters

Added by Ilya Dryomov almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #52111: pacific: [pwl] fix buf_persist and add writeback_lat perf countersResolvedDeepika UpadhyayActions
Actions #1

Updated by Ilya Dryomov almost 3 years ago

  • Pull request ID set to 42581
Actions #2

Updated by Ilya Dryomov almost 3 years ago

  • Subject changed from librbd/cache/pwl: fix buf_persist and add writeback_lat perf counters to [pwl] fix buf_persist and add writeback_lat perf counters
Actions #3

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #52111: pacific: [pwl] fix buf_persist and add writeback_lat perf counters added
Actions #5

Updated by Ilya Dryomov over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF